--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           </form>
           <a href="#">Закладки: 0</a>
           <a href="#">Корзина: 0</a>
-          <a href="#">Оформить заказ</a>
-        </div>
-      </div>
+          <a class="button" href="#">Оформить заказ</a>
+        </div> <!-- container -->
+      </div> <!-- header-top -->
       <div class="header-middle"> <!-- средний блок шапки -->
         <div class="container">
           <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -50,7 +50,6 @@
     </header>
 
     <main>
-
       <section class="container promo">
         <div class="promo-top">
           <ul class="promo-list">
@@ -69,7 +68,7 @@
           </ul>
         </div>
         <div class="promo-bottom-container">
-          <div class="promo-left"> <!-- слайдер: пока не трогать -->
+          <div class="promo-left">
             <div class="gallery">
               <div class="gallery-header">
                 <h3>Дрели</h3>
@@ -87,6 +86,18 @@
               <div class="caption">
                 <a class="button" href="catalog.html">Открыть каталог</a>
               </div>
+              <ul class="slides-switches">
+                <li class="slide-radio">
+                  <button class="slide-btn">
+                    Первый слайд
+                  </button>
+                </li>
+                <li class="slide-radio">
+                  <button class="slide-btn">
+                    Второй слайд
+                  </button>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="promo-right">
@@ -102,9 +113,9 @@
         </div>
       </section>
 
-      <section class="goods-and-manufacturers">
+      <div class="goods-and-manufacturers">
         <div class="container">
-          <div class="goods"> <!-- популярные товары -->
+          <div class="goods">
             <div>
               <h2>Популярные товары:</h2>
               <a href="#">Все популярные товары</a>
@@ -125,7 +136,7 @@
                 <li class="catalog-item">
                   <figure class="catalog-item-image">
                     <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-                  </figure>              
+                  </figure>
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
                     <span class="catalog-item-title">BFG 3000</span>
@@ -134,12 +145,12 @@
                   <p class="new-price">15500 ₽.</p>
                 </li>
                 <li class="catalog-item">
-                  <figure class="catalog-item-image">           
+                  <figure class="catalog-item-image">
                     <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                  </figure>              
+                  </figure>
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
-                    <span class="catalog-item-title">BFG 6000</span>                
+                    <span class="catalog-item-title">BFG 6000</span>
                   </h3>
                   <p class="old-price">30500 ₽.</p>
                   <p class="new-price">25500 ₽.</p>
@@ -157,56 +168,56 @@
               </ul>
             </div>
           </div>
-          <div class="manufacturers"> <!-- популярные производители -->
+          <section class="brands"> <!-- популярные производители -->
             <div>
               <h2>Популярные производители:</h2>
               <a href="#">Все производители</a>
             </div>
-            <ul class="manufacturers-list">
+            <ul class="brands-list">
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/bosch.jpg" width="126" height="37" alt="Bosch">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/makita.jpg" width="123" height="40" alt="makita">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/de-walt.jpg" width="146" height="44" alt="deWALT">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/interskol.jpg" width="200" height="88" alt="Интерскол">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/lg.jpg" width="121" height="73" alt="LG">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/aeg.jpg" width="151" height="96" alt="AEG power solutions">
                 </a>
               </li>
               <li>
-                <a class="manufacturers-list-item" href="#">
+                <a class="brands-list-item" href="#">
                   <img src="img/metabo.jpg" width="204" height="69" alt="metabo">
                 </a>
               </li>
             </ul>
-          </div>
+          </section>
         </div>
-      </section>
+      </div>
 
       <section class="delivery-and-services">
         <div class="container">
@@ -214,12 +225,12 @@
             <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
-          <div class="services">
+          <div class="services-description">
             <div class="services-list">
-              <ul>
-                <li>Доставка</li>
-                <li>Гарантия</li>
-                <li>Кредит</li>
+              <ul class="services-navigation">
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Гарантия</a></li>
+                <li><a href="#">Кредит</a></li>
               </ul>
             </div>
             <section class="delivery-description">
@@ -243,25 +254,23 @@
                 Отправить заявку
               </a>
             </section>
-          </div>
-        </div>
+          </div> <!-- services-description -->
+        </div> <!-- container -->
       </section>
 
       <section class="company-and-contacts">
         <div class="container">
-          <!-- О КОМПАНИИ -->
           <div class="about-us">
             <h2>Компания «Техномарт»</h2>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
-            <ul>
-              <li>Деловые линии</li>
-              <li>Автотрейдинг</li>
-              <li>ЖелДорЭкспедиция</li>
+            <ul class="list-orders">
+              <li class="order-1">Деловые линии</li>
+              <li class="order-2">Автотрейдинг</li>
+              <li class="order-3">ЖелДорЭкспедиция</li>
             </ul>
             <a class="button" href="about.html" tabindex="0">Подробнее о компании</a>
           </div>
-          <!-- КОНТАКТЫ -->
           <div class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис.</p>
@@ -272,13 +281,12 @@
           </div>
         </div>
       </section>
-
     </main>
 
-    <!-- ФУТЕР -->
+    <!-- ФУТЕР ФУТЕР ФУТЕР -->
     <footer class="main-footer">
-      <div class="footer-top">
-        <div class="container">
+      <div class="container">
+        <div class="footer-top">
           <span class="header-logo">Техномарт</span>
           <ul class="footer-top-navigation">
             <li><a href="about-us.html">Компания</a></li>
@@ -288,11 +296,9 @@
             <li><a href="contacts.html">Контакты</a></li>
           </ul>
         </div>
-      </div>
-      <div class="footer-middle">
-        <div class="container">
+        <div class="footer-middle">
           <address class="footer-contacts">
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <!-- глупый першин сказал поставить тут br, хотя наставнег марина не разрешила, ох уж этот першин, совсем ничего не понимает в разметке проектов академии -->
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7(812)555-05-55
           </address>
           <ul class="footer-top-navigation">
@@ -302,18 +308,17 @@
             <li><a href="special-offers.html">Спецпредложения</a></li>
           </ul>
         </div>
-      </div>
-      <!-- СОЦИАЛКИ --> 
+      </div> <!-- container -->
       <div class="footer-bottom">
         <div class="container">
-          <p>
-            &copy; 2010-2017 Компания «Техномарт»
+          <p class="copyright">
+            &copy; 2010-2017 Компания «Техномарт»<br>
             Все права защищены
-          <p>
-          <ul class="footer-social">
-            <li><a class="social-button" href="#" aria-label="Вконтакте"></a></li>
-            <li><a class="social-button" href="#" aria-label="Фейсбук"></a></li>
-            <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
+          </p>
+          <ul class="social-buttons">
+            <li><a class="social-button-vkontakte" href="#" aria-label="Вконтакте"></a></li>
+            <li><a class="social-button-facebook" href="#" aria-label="Фейсбук"></a></li>
+            <li><a class="social-button-instagram" href="#" aria-label="Инстаграм"></a></li>
           </ul>
           <p>
             Обратная связь:
@@ -323,8 +328,8 @@
             Разработано &#8211;
             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
-        </div>
-      </div>
+        </div> <!-- container -->
+      </div> <!-- footer-bottom -->
     </footer>
 
     <!-- popUp Cart -->
