--- a/catalog.html
+++ b/catalog.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
 
   <body>
     <header class="main-header">
-      <div class="header-top"> <!-- верхний блок шапки -->
+      <div class="header-top">
         <div class="container">
           <a class="header-logo" href="index.html">Техномарт</a>
           <form class="search">
@@ -137,7 +138,7 @@
         </ul>
       </div>
 
-      <!-- карточки товаров -->
+      <!-- КАРТОЧКИ ТОВАРОВ -->
       <section class="catalog-goods">
         <ul class="catalog-list">
           <li class="catalog-item">
