--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
 
   <body>
@@ -24,7 +25,7 @@
       <div class="header-middle"> <!-- средний блок шапки -->
         <div class="container">
           <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-          <div class="header-contacts">            
+          <div class="header-contacts">
             <a href="tel:+78125550555">+7(812)555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
