--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>HTML Academy: Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
     <header class="main-header">
-      <!-- верхний блок шапки -->
       <div class="header-top">
         <div class="container">
           <a class="header-logo">Техномарт</a>
           <form class="search">
             <input type="text" placeholder="Поиск:">
-            <button class="visually-hidden" type="submit">Найти</button> <!-- кнопку потом скрыть -->
+            <button class="visually-hidden" type="submit">Найти</button>
           </form>
           <a href="#">Закладки: 0</a>
           <a href="#">Корзина: 0</a>
