базовая стилизация главной страницы

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
     <header class="main-header">
-      <div class="header-top">
-        <div class="container">
+      <div class="container">
+        <div class="header-top">
           <a class="header-logo">Техномарт</a>
           <form class="search">
             <input type="text" placeholder="Поиск:">
@@ -21,9 +21,9 @@
           <a href="#">Закладки: 0</a>
           <a href="#">Корзина: 0</a>
           <a class="button" href="#">Оформить заказ</a>
-        </div> <!-- container -->
-      </div> <!-- header-top -->
-      <div class="header-middle"> <!-- средний блок шапки -->
+        </div> <!-- header-top -->
+      </div> <!-- container -->
+      <div class="header-middle">
         <div class="container">
           <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
           <div class="header-contacts">
@@ -36,8 +36,8 @@
           </ul>
         </div>
       </div>
-      <nav class="main-navigation"> <!-- основная навигация -->
-        <div class="container">
+      <div class="container">
+        <nav class="main-navigation">
           <ul class="footer-top-navigation">
             <li><a>Главная</a></li>
             <li><a href="about-us.html">Компания</a></li>
@@ -47,29 +47,29 @@
             <li><a href="delivery.html">Доставка</a></li>
             <li><a href="contacts.html">Контакты</a></li>
           </ul>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
 
     <main>
       <section class="container promo">
         <div class="promo-top">
           <ul class="promo-list">
-            <li class="promo-item new">
+            <li class="promo-item-1 new">
               <h3>Материалы</h3>
               <a href="#">На любой вкус</a>
             </li>
-            <li class="promo-item">
+            <li class="promo-item-2">
               <h3>Инструмент</h3>
               <a href="#">На все случаи</a>
             </li>
-            <li class="promo-item">
+            <li class="promo-item-3">
               <h3>Техника</h3>
               <a href="#">Для стройки</a>
             </li>
           </ul>
         </div>
-        <div class="promo-bottom-container">
+        <div class="promo-bottom">
           <div class="promo-left">
             <div class="gallery">
               <div class="gallery-header">
@@ -86,7 +86,7 @@
                 <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
               </div>
               <div class="caption">
-                <a class="button" href="catalog.html">Открыть каталог</a>
+                <a class="btn" href="catalog.html">Открыть каталог</a>
               </div>
               <ul class="slides-switches">
                 <li class="slide-radio">
@@ -103,11 +103,11 @@
             </div>
           </div>
           <div class="promo-right">
-            <div class="promo-item">
+            <div class="promo-item-4">
               <h3>Скидки 50%</h3>
               <a href="#">На 350 товаров</a>
             </div>
-            <div class="promo-item">
+            <div class="promo-item-5">
               <h3>Доставка</h3>
               <a href="#">Бесплатно</a>
             </div>
