--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <input type="text" placeholder="Поиск:">
             <button class="visually-hidden" type="submit">Найти</button>
           </form>
-          <a href="#">Закладки: 0</a>
-          <a href="#">Корзина: 0</a>
-          <a class="button" href="#">Оформить заказ</a>
+          <a class="book-cart" href="#">Закладки: 0</a>
+          <a class="book-cart" href="#">Корзина: 0</a>
+          <a class="checkout" href="#">Оформить заказ</a>
         </div> <!-- header-top -->
       </div> <!-- container -->
       <div class="header-middle">
         <div class="container">
-          <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+          <h1 class="heading">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
           <div class="header-contacts">
-            <a href="tel:+78125550555">+7(812)555-05-55</a>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <ul class="user-login">
