стилизация до блока с карточками

--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
             </div>
           </div>
           <div class="promo-right">
-            <div class="promo-item-4">
-              <h3>Скидки 50%</h3>
-              <a href="#">На 350 товаров</a>
-            </div>
-            <div class="promo-item-5">
-              <h3>Доставка</h3>
-              <a href="#">Бесплатно</a>
-            </div>
+            <ul class="promo-list">
+              <li class="promo-item-4">
+                <h3>Скидки 50%</h3>
+                <a href="#">На 350 товаров</a>
+              </li>
+              <li class="promo-item-5">
+                <h3>Доставка</h3>
+                <a href="#">Бесплатно</a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
@@ -128,10 +130,11 @@
                   <figure class="catalog-item-image">
                     <img src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
                   </figure>
-                  <h3>
-                    <span class="catalog-category">Перфоратор BOSCH</span>
-                    <span class="catalog-item-title">BFG 9000</span>
-                  </h3>
+                    <a class="catalog-category">
+                      <h3>
+                        Перфоратор BOSCH BFG 9000
+                      </h3>
+                    </a>
                   <p class="old-price">32500 ₽.</p>
                   <p class="new-price">25500 ₽.</p>
                 </li>
